router setup completed!

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Realtime chat application",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=development nodemon app.js",
+    "prod": "NODE_ENV=prodcution node app.js"
   },
   "repository": {
     "type": "git",
