--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 APP_NAME=Chat Application
+APP_URL=http://localhost:5000
 PORT=5000
 MONGO_CONNECTION_STRING=mongodb://127.0.0.1:27017/chat
 COOKIE_NAME=chat-app
